<resources>
    <string name="app_name">InsecureShop</string>

    <string name="action_settings">Settings</string>
    <string name="msg_no_internet">No Internet</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Log in</string>
    <string name="lable_login">Log in.</string>
    <string name="str_publish">publish</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="selection_media_type">Select media type.</string>
    <string name="video">Video</string>
    <string name="photo">Photo</string>
    <string name="txt_title">Title</string>
    <string name="txt_content">Content</string>
    <string name="txt_logout">logout</string>
    <string name="select_file">Select file</string>
    <string name="txt_success">Success !</string>
    <string name="txt_kala_uploaded">Your file has been uploaded.</string>
    <string name="txt_ok">Ok</string>
    <string name="webview">Webview</string>
    <string name="aws_Identity_pool_ID">us-east-1:7e9426f7-42af-4717-8689-00a9a4b65c1c</string>
</resources>
