<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_margin="@dimen/large_margin"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="@dimen/extra_large_margin">

            <androidx.appcompat.widget.AppCompatButton
                style="@style/DefaultButton"
                android:id="@+id/btnOk"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:layout_width="wrap_content"
                android:paddingEnd="@dimen/extra_large_margin"
                android:paddingStart="@dimen/extra_large_margin"
                android:text="@string/txt_ok"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMessage" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Roboto.Bold.Large"
                android:gravity="center"
                android:id="@+id/tvMessage"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:layout_width="0dp"
                android:text="@string/txt_kala_uploaded"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSuccess" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Roboto.Bold.Large"
                android:gravity="center"
                android:id="@+id/tvSuccess"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/txt_success"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/large_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>