<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:padding="@dimen/large_padding"
        tools:context=".ui.home.MainActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivTop"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/ic_shopping_cart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lable_login"
            style="@style/Roboto.Bold.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lable_login"
            app:layout_constraintBottom_toTopOf="@+id/textInputUserName"
            app:layout_constraintStart_toStartOf="@id/textInputUserName"
            app:layout_constraintTop_toBottomOf="@id/ivTop"
            app:layout_constraintEnd_toEndOf="@id/textInputUserName"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputUserName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extra_large_margin"
            android:background="#FFEA5A"
            app:layout_constraintBottom_toTopOf="@+id/textInputPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lable_login">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/DefaultEditText"
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_email_black_24dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="#FFEA5A"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputUserName"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/black">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/DefaultEditText"
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            style="@style/DefaultButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/btn_login"
            android:onClick="onLogin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>